--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -57,7 +57,7 @@ body {
 
   &#{&}--stats,
   &#{&}--distances,
-  &#{&}--mountains, {
+  &#{&}--mountains {
     background-color: rgba($COLOR_GREEN, 0.25);
   }
 }
