--- a/site/layouts/_default/mountains.html
+++ b/site/layouts/_default/mountains.html
@@ -5,39 +5,65 @@
   <div class="blocks">
     {{ range (.Pages.ByParam "handle").Reverse }}
       <div class="blocks__block block">
-        <div class="block__image-container responsive-margin-bottom">
+        <div class="block__image-container">
           <img
             class="block__image"
             alt="{{ .Params.location }} {{ .Title }}"
-            height="600"
             loading="lazy"
             src="/images/{{ $.Page.Params.handle }}/{{ .Params.handle }}.jpg"
-            width="900"
           >
+
+          <div class="block__meta-container row">
+            <div class="block__meta s6 m3">
+              <h2 class="block__title">{{ .Title }}</h2>
+
+              <div class="block__stats sub-text">
+                <div class="block__stat icon">
+                  <span class="icon__image">
+                    {{ partial "icons/location.svg" . }}
+                  </span>
+
+                  <span class="icon__text">
+                    {{ .Params.location }} ({{ .Params.duration }} nights)
+                  </span>
+                </div>
+
+                <div class="block__stat icon">
+                  <span class="icon__image">
+                    {{ partial "icons/distance.svg" . }}
+                  </span>
+
+                  <span class="icon__text">
+                    {{ .Params.distance }} miles
+                  </span>
+                </div>
+
+                <div class="block__stat icon">
+                  <span class="icon__image">
+                    {{ partial "icons/mountains.svg" . }}
+                  </span>
+
+                  <span class="icon__text">
+                    {{ .Params.mountains }} ({{ .Params.mountains_new }} new)
+                  </span>
+                </div>
+
+                <div class="block__stat icon">
+                  <span class="icon__image">
+                    {{ partial "icons/steps.svg" . }}
+                  </span>
+
+                  <span class="icon__text">
+                    {{ .Params.steps }} steps
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="block__meta">
-          <h2 class="block__title">{{ .Title }}</h2>
-
-          <ul class="block__stats">
-            <li class="block__stat block__stat--location">
-              {{ .Params.location }} ({{ .Params.duration }} nights)
-            </li>
-
-            <li class="block__stat block__stat--distance">
-              {{ .Params.distance }} miles
-            </li>
-
-            <li class="block__stat block__stat--mountains">
-              {{ .Params.mountains }} ({{ .Params.mountains_new }} new)
-            </li>
-
-            <li class="block__stat block__stat--steps">
-              {{ .Params.steps }} steps
-            </li>
-          </ul>
-
-          <div class="block__content">
+        <div class="row">
+          <div class="block__content s8 m6 offset-m2">
             {{ .Content }}
           </div>
         </div>
