Dark mode cookie is no longer set by OS preference, added animation to dark mode icons

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -19,8 +19,11 @@
     js-mode="toggle"
   >
     <span class="icon">
-      <span class="icon__image" js-mode="icon">
-        {{ partial "icons/light-mode.svg" . }}
+      <span class="icon__image footer__icon" js-mode="icon">
+        <span class="footer__icon-slide">
+          {{ partial "icons/dark-mode.svg" . }}
+          {{ partial "icons/light-mode.svg" . }}
+        </span>
       </span>
 
       <span class="icon__text" js-mode="text">Enable dark mode</span>
