--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -39,6 +39,10 @@
           </li>
         {{ end }}
       </ul>
+
+      <div class="header__dark-mode">
+        {{ partial "dark-mode" . }}
+      </div>
     </nav>
   </div>
 </header>
