--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -26,6 +26,7 @@
 @import 'components/burger';
 @import 'components/card';
 @import 'components/chart';
+@import 'components/dark-mode';
 // @import 'components/client';
 // @import 'components/clients';
 @import 'components/footer';
