--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html
   lang="{{ $.Site.Language.Lang }}"
   data-mode="light"
-  js-mode="container"
+  js-dark-mode="container"
 >
 <head>
   <base href="{{ if getenv "CONTEXT" }}{{ cond (eq "production" (getenv "CONTEXT")) (getenv "URL") (getenv "DEPLOY_PRIME_URL") }}{{ else }}{{ end }}">
