Pushed footer to always be at the bottom of the page

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <!-- Partials > Footer. -->
 <!-- Site footer. -->
-<div class="footer container">
+<div class="footer__base container">
   <span class="footer__item sub-text">
     &copy; 2008-{{ now.Format "2006" }} Craig Baldwin
   </span>
