--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -73,7 +73,7 @@
     {{ block "main" . }}{{ end }}
   </main>
 
-  <footer role="contentinfo">
+  <footer class="footer" role="contentinfo">
     {{ block "footnotes" . }}
       {{ partial "footnotes" . }}
     {{ end }}
