--- a/site/layouts/partials/footnotes.html
+++ b/site/layouts/partials/footnotes.html
@@ -3,15 +3,16 @@
 {{ $url := .URL }}
 {{ $page := .Title }}
 
-<div class="footnotes container row">
+<div class="footer__footnotes container row">
   {{ range .Site.Menus.main }}
     <a
       class="
-       footnote footnote--{{ .Identifier}}
-       s4 m2
-       {{ if (eq $url .URL) }}is-active{{ end }}
-       {{ if and (eq $page "Distances") (eq .Title "Stats") }}is-active{{ end }}
-       {{ if and (eq $page "Mountains") (eq .Title "Stats") }}is-active{{ end }}
+        footer__footnote
+        footnote footnote--{{ .Identifier}}
+        s4 m2
+        {{ if (eq $url .URL) }}is-active{{ end }}
+        {{ if and (eq $page "Distances") (eq .Title "Stats") }}is-active{{ end }}
+        {{ if and (eq $page "Mountains") (eq .Title "Stats") }}is-active{{ end }}
       "
       href="{{ .URL }}"
     >
