--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -7,6 +7,11 @@
 .footer {
   display: flex;
   flex-wrap: wrap;
+  margin-top: auto;
+
+  &__footnotes {
+    margin-bottom: $SPACING_M;
+  }
 
   &__item {
     margin-bottom: $SPACING_S;
