Adjusted layout of blocks based pages

--- a/src/styles/base/grid.scss
+++ b/src/styles/base/grid.scss
@@ -28,10 +28,11 @@ $SITE_WIDTH: 70rem;
 $SPACING_2XS: 0.5rem;
 $SPACING_XS: 1rem;
 $SPACING_S: 2rem;
-$SPACING_P: 2.5rem; // text paragraph
+$SPACING_P: 2.5rem; // Text paragraph
 $SPACING_M: 3rem;
 $SPACING_L: 6rem;
-$SPACING_XL: 12rem;
+$SPACING_XL: 9rem;
+$SPACING_2XL: 12rem;
 
 /**
  * Layers.
