--- a/src/styles/components/chart.scss
+++ b/src/styles/components/chart.scss
@@ -12,8 +12,14 @@
   &__chart {
     height: 0;
     max-width: 100%;
-    padding-bottom: 50%;
+    padding-bottom: 47%;
     position: relative;
     width: 100%;
+  }
+
+  @include mq($from: medium) {
+    &__chart {
+      padding-bottom: 49%;
+    }
   }
 }
