Adding colours and removing emoji to all pages

--- a/src/styles/base/colour.scss
+++ b/src/styles/base/colour.scss
@@ -17,7 +17,7 @@ $COLOR_PURPLE: rgb(155, 89, 182);
 $COLOR_BLACK: rgb(27, 34, 41);
 $COLOR_WHITE: rgb(255, 255, 255);
 $COLOR_DARK_GREY: rgb(124, 124, 124);
+$COLOR_MID_GREY: rgb(200, 200, 200);
 $COLOR_LIGHT_GREY: rgb(242, 242, 242);
 
 $COLOR_DARK_MODE_WHITE: $COLOR_LIGHT_GREY;
-$COLOR_LINK: rgb(200, 200, 200);
