--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -28,20 +28,10 @@
   <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="/images/favicon/manifest.json">
-  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#aed6f1">
+  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#3498db">
   <link rel="shortcut icon" href="/images/favicon/favicon.ico">
   <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
-  <meta name="theme-color" content="#aed6f1">
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9975162-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-9975162-1');
-  </script> -->
+  <meta name="theme-color" content="#3498db">
 
   <title>
     {{ if (eq .Title "Index") }}
