BUILD: Charts now respect dark mode setting, WIP only works one way

--- a/site/layouts/partials/theme-strings.html
+++ b/site/layouts/partials/theme-strings.html
@@ -3,7 +3,7 @@
 <script>
   document.documentElement.className = document.documentElement.className.replace('no-js', '');
 
-  window.theme = {
+  window.site = {
 
   };
 </script>
