BUILD: Mountains map light mode

--- a/site/layouts/partials/map.html
+++ b/site/layouts/partials/map.html
@@ -1,6 +1,6 @@
 <!-- Partials > Map. -->
 <!-- Mountains map. -->
-<div class="map layout-span responsive-margin-bottom">
+<div class="map">
   <div id="map" class="map__display"></div>
 
   <div class="map__progress">
