--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -32,4 +32,4 @@
 @import 'components/footer';
 @import 'components/footnotes';
 @import 'components/header';
-// @import 'components/map';
+@import 'components/map';
