BUILD: Created dark mode for map

--- a/src/styles/components/map.scss
+++ b/src/styles/components/map.scss
@@ -9,35 +9,39 @@
   mix-blend-mode: darken;
 
   &__display {
+    @include transition(border-color);
     border: 1px solid $COLOR_BLACK;
     height: 0;
     padding-bottom: 100%;
+  }
 
-    .leaflet-popup-content-wrapper {
-      background-color: $COLOR_BLACK;
-      border-radius: 0;
-      box-shadow: none;
-      color: $COLOR_DARK_MODE_WHITE;
-    }
+  .leaflet-popup-content-wrapper {
+    background-color: $COLOR_BLACK;
+    border-radius: 0;
+    box-shadow: none;
+    color: $COLOR_DARK_MODE_WHITE;
+  }
 
-    .leaflet-popup-content {
-      margin: $SPACING_XS;
-    }
+  .leaflet-popup-content {
+    margin: $SPACING_XS;
+  }
 
-    .leaflet-popup-tip {
-      background-color: $COLOR_BLACK;
-      box-shadow: none;
-    }
+  .leaflet-popup-tip {
+    background-color: $COLOR_BLACK;
+    box-shadow: none;
+  }
 
-    .leaflet-control-attribution a {
-      color: $COLOR_BLACK;
-      font-family: $FONT;
-    }
+  .leaflet-control-attribution,
+  .leaflet-control-attribution a {
+    @include transition(color);
+    color: $COLOR_BLACK;
+    font-family: $FONT;
   }
 
   &__progress {
+    @include transition(background-image, border-color);
     // stylelint-disable-next-line
-    background-image: url('data:image/svg+xml,%3Csvg width="4" height="4" viewBox="0 0 4 4" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="%23000000" fill-opacity="1" fill-rule="evenodd"%3E%3Ccircle cx="1" cy="1" r="1"/%3E%3Ccircle cx="1" cy="1" r="1"/%3E%3C/g%3E%3C/svg%3E');
+    background-image: url('data:image/svg+xml,%3Csvg width="4" height="4" viewBox="0 0 4 4" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="%231b2229" fill-opacity="1" fill-rule="evenodd"%3E%3Ccircle cx="1" cy="1" r="1"/%3E%3Ccircle cx="1" cy="1" r="1"/%3E%3C/g%3E%3C/svg%3E');
     border: 1px solid $COLOR_BLACK;
     border-top: 0;
     height: 50px;
@@ -46,7 +50,7 @@
   }
 
   &__progress-bar {
-    @include transition(width $TIMING_XL ease);
+    @include transition(background-color, width $TIMING_XL ease);
     background-color: $COLOR_BLACK;
     height: 100%;
     left: 0;
@@ -69,7 +73,7 @@
     z-index: 2;
 
     &#{&}--count {
-      @include transition(opacity, ease);
+      @include transition(color, opacity $TIMING_L ease);
       color: $COLOR_WHITE;
       opacity: 0;
 
@@ -79,8 +83,23 @@
     }
 
     &#{&}--total {
+      @include transition(background-color, color);
       background-color: $COLOR_WHITE;
       color: $COLOR_BLACK;
+    }
+  }
+
+  .is-dark & {
+    // mix-blend-mode: lighten;
+
+    &__display {
+      border-color: $COLOR_DARK_MODE_WHITE;
+    }
+
+    &__progress {
+      // stylelint-disable-next-line
+      background-image: url('data:image/svg+xml,%3Csvg width="4" height="4" viewBox="0 0 4 4" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="%23f2f2f2" fill-opacity="1" fill-rule="evenodd"%3E%3Ccircle cx="1" cy="1" r="1"/%3E%3Ccircle cx="1" cy="1" r="1"/%3E%3C/g%3E%3C/svg%3E');
+      border-color: $COLOR_DARK_MODE_WHITE;
     }
   }
 
