--- a/src/styles/components/footnotes.scss
+++ b/src/styles/components/footnotes.scss
@@ -89,6 +89,14 @@
     }
   }
 
+  .no-transition & {
+    transition: none;
+
+    &::before {
+      transition: none;
+    }
+  }
+
   @include mq($from: medium) {
     height: 80px;
   }
