--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -58,6 +58,7 @@
     }
 
     &__meta {
+      @include transition(background-color);
       background-color: mix($COLOR_GREEN, $COLOR_WHITE, 25%);
       padding-bottom: $SPACING_M;
       padding-right: $SPACING_M;
@@ -65,6 +66,18 @@
 
     &__content {
       padding-left: $SPACING_M;
+    }
+
+    .is-dark & {
+      &__meta {
+        background-color: mix($COLOR_GREEN, $COLOR_BLACK, 25%);
+      }
+    }
+
+    .no-transition & {
+      &__meta {
+        transition: none;
+      }
     }
   }
 }
