--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -28,10 +28,10 @@
   <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="/images/favicon/manifest.json">
-  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#3498db">
+  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#1b2229">
   <link rel="shortcut icon" href="/images/favicon/favicon.ico">
   <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
-  <meta name="theme-color" content="#3498db">
+  <meta name="theme-color" content="#1b2229">
 
   <title>
     {{ if (eq .Title "Index") }}
