BUILD: Improved alt text of mountains photos

--- a/site/layouts/_default/mountains.html
+++ b/site/layouts/_default/mountains.html
@@ -8,7 +8,7 @@
         <div class="block__image-container">
           <img
             class="block__image"
-            alt="{{ .Params.location }} {{ .Title }}"
+            alt="{{ .Params.alt }}"
             loading="lazy"
             src="/images/{{ $.Page.Params.handle }}/{{ .Params.handle }}.jpg"
           >
