--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -27,8 +27,8 @@
 @import 'components/card';
 @import 'components/chart';
 @import 'components/dark-mode';
-// @import 'components/client';
-// @import 'components/clients';
+@import 'components/client';
+@import 'components/clients';
 @import 'components/footer';
 @import 'components/footnotes';
 @import 'components/header';
