--- a/site/layouts/partials/client.html
+++ b/site/layouts/partials/client.html
@@ -1,38 +1,39 @@
 <!-- Partials > Client. -->
 <!-- Individual client display. -->
 {{ $logoPath := printf "logos/%s%s" .Params.handle ".svg" }}
+{{ $classes := cond (eq .Params.type "selected") "s8 m4" "s4 m2" }}
 
-<div class="clients__client client">
-  <div
-    class="client__image-container"
-    href="{{ .Params.link }}"
-    style="background-image: url('');"
-    target="blank"
-  >
-    <img
-      class="client__image"
-      alt=""
-      sizes="auto"
-      src="/images/clients/{{ .Params.handle }}-background-500x.jpg"
-      srcset="
-        /images/clients/{{ .Params.handle }}-background-500x.jpg 500w,
-        /images/clients/{{ .Params.handle }}-background-1000x.jpg 1000w
-      "
-    >
+<div class="clients__client client {{ $classes }}">
+  <div class="client__image-container">
+    {{ if (eq .Params.type "selected") }}
+      <img
+        class="client__image"
+        alt=""
+        loading="lazy"
+        sizes="auto"
+        src="/images/clients/{{ .Params.handle }}-background-500x.jpg"
+        srcset="
+          /images/clients/{{ .Params.handle }}-background-500x.jpg 500w,
+          /images/clients/{{ .Params.handle }}-background-1000x.jpg 1000w
+        "
+      >
+    {{ end }}
 
-    {{ partial $logoPath . }}
+    <div class="client__logo">
+      {{ partial $logoPath . }}
+    </div>
+
+    {{ if .Params.link }}
+      <h3 class="client__title h2">
+        <a href="{{ .Params.link }}">
+          {{ .Title }}
+        </a>
+      </h3>
+
+    {{ else }}
+      <h3 class="client__title h2 s4">{{ .Title }}</h3>
+    {{ end }}
   </div>
-
-  {{ if .Params.link }}
-    <h3 class="client__title h2">
-      <a href="{{ .Params.link }}">
-        {{ .Title }}
-      </a>
-    </h3>
-
-  {{ else }}
-    <h3 class="client__title h2">{{ .Title }}</h3>
-  {{ end }}
 
   {{ if .Content }}
     <div class="client__content">
