--- a/src/styles/components/client.scss
+++ b/src/styles/components/client.scss
@@ -9,33 +9,108 @@
   position: relative;
 
   &__image-container {
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: 60% auto;
-    border: 1px solid $COLOR_LIGHT_GREY;
-    cursor: pointer;
-    display: block;
+    border: 0 solid $COLOR_BLACK;
     height: 0;
+    margin-bottom: $SPACING_S;
     padding-bottom: 100%;
     position: relative;
     width: 100%;
+  }
 
-    &#{&}--direct-doors,
-    &#{&}--hummingbird-bakery,
-    &#{&}--lightbox {
-      background-size: 88% auto;
+  &__image {
+    height: 100%;
+    left: 0;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: $LAYER_BELOW;
+  }
+
+  &__logo {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: $LAYER_BASE;
+  }
+
+  .logo {
+    height: auto;
+    width: 62%;
+
+    &--direct-doors {
+      width: 75%;
     }
 
-    &#{&}--sons {
-      background-size: 55% auto;
+    &--sons {
+      color: rgb(238, 250, 213);
+      width: 35%;
     }
 
-    &#{&}--lightbox {
-      background-position: 50% 56%;
+    &--hummingbird-bakery,
+    &--lightbox {
+      width: 88%;
     }
 
-    &#{&}--newbie {
-      background-size: 70% auto;
+    &--lightbox {
+      margin-top: 7%;
+    }
+
+    &--newbie {
+      width: 70%;
+    }
+  }
+
+  &__title {
+    @include transition(background-color);
+    background-color: mix($COLOR_PURPLE, $COLOR_WHITE, 25%);
+    bottom: 0;
+    left: 0;
+    // Desired width - half grid-gap
+    min-width: calc(50% - (#{$SPACING_S} / 2));
+    padding: $SPACING_XS;
+    padding-left: 0;
+    position: absolute;
+    z-index: $LAYER_RAISED;
+  }
+
+  .clients--list & {
+    &__image-container {
+      @include transition(border-color);
+      border-width: 1px;
+      margin-bottom: 0;
+    }
+
+    &__title {
+      @include visually-hidden;
+    }
+  }
+
+  .is-dark & {
+    &__image-container {
+      border-color: $COLOR_DARK_MODE_WHITE;
+    }
+
+    &__title {
+      background-color: mix($COLOR_PURPLE, $COLOR_BLACK, 25%);
+    }
+  }
+
+  .no-transition & {
+    &__image-container,
+    &__title {
+      transition: none;
+    }
+  }
+
+  @include mq($from: medium) {
+    &__image-container {
+      margin-bottom: $SPACING_M;
     }
   }
 }
