BUILD: Image content for work page

--- a/site/layouts/partials/client.html
+++ b/site/layouts/partials/client.html
@@ -11,10 +11,10 @@
         alt=""
         loading="lazy"
         sizes="auto"
-        src="/images/clients/{{ .Params.handle }}-background-500x.jpg"
+        src="/images/clients/{{ .Params.handle }}-500x.jpg"
         srcset="
-          /images/clients/{{ .Params.handle }}-background-500x.jpg 500w,
-          /images/clients/{{ .Params.handle }}-background-1000x.jpg 1000w
+          /images/clients/{{ .Params.handle }}-500x.jpg 500w,
+          /images/clients/{{ .Params.handle }}-1000x.jpg 1000w
         "
       >
     {{ end }}
