--- a/src/styles/components/client.scss
+++ b/src/styles/components/client.scss
@@ -44,6 +44,7 @@
     width: 62%;
 
     &--direct-doors {
+      color: rgb(230, 30, 38);
       width: 75%;
     }
 
@@ -71,6 +72,7 @@
     background-color: mix($COLOR_PURPLE, $COLOR_WHITE, 25%);
     bottom: 0;
     left: 0;
+    line-height: $LINE_HEIGHT_S;
     // Desired width - half grid-gap
     min-width: calc(50% - (#{$SPACING_S} / 2));
     padding: $SPACING_XS;
