BUILD: Combined logos with block partial and deleted client partial

--- a/site/layouts/_default/mountains.html
+++ b/site/layouts/_default/mountains.html
@@ -2,7 +2,7 @@
   {{- .Content -}}
   {{ partial "map" . }}
 
-  <div class="blocks">
+  <div class="blocks row">
     {{ range (.Pages.ByParam "handle").Reverse }}
       {{ partial "block" . }}
     {{ end }}
