--- a/site/layouts/_default/work.html
+++ b/site/layouts/_default/work.html
@@ -1,22 +1,20 @@
 {{ define "main" }}
   {{- .Content -}}
 
-  <div class="blocks">
-    <h2 class="visually-hidden">Selected</h2>
+  <div class="blocks row">
+    <h2 class="visually-hidden s8">Selected</h2>
 
     {{ range .Pages.ByWeight }}
       {{ if (eq .Params.block_type "clients") }}
         {{ partial "block" . }}
       {{ end }}
     {{ end }}
-  </div>
 
-  <div class="clients clients--list row">
-    <h2 class="visually-hidden">More</h2>
+    <h2 class="visually-hidden s8">More</h2>
 
     {{ range .Pages.ByTitle }}
-      {{ if (eq .Params.block_type "logo") }}
-        {{ partial "client" . }}
+      {{ if (eq .Params.block_type "logos") }}
+        {{ partial "block" . }}
       {{ end }}
     {{ end }}
   </div>
