--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -20,6 +20,46 @@
     width: 100%;
   }
 
+  &__logo {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: $LAYER_BASE;
+  }
+
+  .logo {
+    height: auto;
+    width: 62%;
+
+    &--direct-doors {
+      color: rgb(230, 30, 38);
+      width: 75%;
+    }
+
+    &--sons {
+      color: rgb(238, 250, 213);
+      width: 35%;
+    }
+
+    &--hummingbird-bakery,
+    &--lightbox {
+      width: 88%;
+    }
+
+    &--lightbox {
+      margin-top: 7%;
+    }
+
+    &--newbie {
+      width: 70%;
+    }
+  }
+
   &__meta {
     @include transition(background-color);
     line-height: $LINE_HEIGHT_S;
@@ -47,26 +87,53 @@
     padding-left: $SPACING_S;
   }
 
+  /**
+   * Logo customisation.
+   */
+  &#{&}--logos {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+
+    #{$parent}__image-container {
+      @include transition(border-color);
+      border: 1px solid currentColor;
+      height: 0;
+      margin-bottom: 0;
+      padding-bottom: 100%;
+    }
+
+    #{$parent}__title {
+      @include visually-hidden;
+    }
+  }
+
+  /**
+   * Template colours.
+   */
   .template--mountains & {
-    #{$parent}__meta {
+    &__meta {
       background-color: mix($COLOR_GREEN, $COLOR_WHITE, 25%);
     }
 
-    #{$parent}__content {
+    &__content {
       border-color: $COLOR_GREEN;
     }
   }
 
   .template--work & {
-    #{$parent}__meta {
+    &__meta {
       background-color: mix($COLOR_PURPLE, $COLOR_WHITE, 25%);
     }
 
-    #{$parent}__content {
+    &__content {
       border-color: $COLOR_PURPLE;
     }
   }
 
+  /**
+   * Dark mode.
+   */
   .is-dark .template--mountains & {
     &__meta {
       background-color: mix($COLOR_GREEN, $COLOR_BLACK, 25%);
@@ -79,6 +146,9 @@
     }
   }
 
+  /**
+   * Media queries.
+   */
   @include mq($from: medium) {
     &__image-container {
       display: block;
