--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -22,12 +22,13 @@
 
   &__logo {
     align-items: center;
+    bottom: 0;
     display: flex;
-    height: 100%;
+    // Full height - height of title
+    height: calc(100% - 47px);
     justify-content: center;
     left: 0;
     position: absolute;
-    top: 0;
     width: 100%;
     z-index: $LAYER_BASE;
   }
@@ -67,16 +68,16 @@
     padding-right: $SPACING_S;
   }
 
-  &__title {
-    margin-bottom: $SPACING_XS;
-  }
-
   &__stats {
     display: flex;
     flex-direction: column;
   }
 
   &__stat {
+    &:first-child {
+      margin-top: $SPACING_XS;
+    }
+
     &:not(:last-child) {
       margin-bottom: $SPACING_XS;
     }
@@ -153,6 +154,20 @@
     &__image-container {
       display: block;
       margin-bottom: $SPACING_M;
+    }
+
+    &__logo {
+      height: 100%;
+    }
+
+    .logo {
+      &--direct-doors {
+        width: 46%;
+      }
+
+      &--sons {
+        width: 20%;
+      }
     }
 
     &__meta-container {
