--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -15,6 +15,21 @@
     position: relative;
   }
 
+  &__link {
+    @include transition(color);
+    color: $COLOR_BLACK;
+
+    #{$parent}__title {
+      text-decoration: underline;
+    }
+  }
+
+  &__link:hover {
+    #{$parent}__title {
+      text-decoration: none;
+    }
+  }
+
   &__image {
     order: 1;
     width: 100%;
@@ -61,6 +76,11 @@
     }
   }
 
+  &__meta-container {
+    position: relative;
+    z-index: $LAYER_RAISED;
+  }
+
   &__meta {
     @include transition(background-color);
     line-height: $LINE_HEIGHT_S;
@@ -96,12 +116,20 @@
       margin-bottom: 0;
     }
 
+    #{$parent}__link:hover #{$parent}__image-container {
+      box-shadow: 2px 2px 0 0 currentColor;
+    }
+
     #{$parent}__image-container {
       @include transition(border-color);
       border: 1px solid currentColor;
       height: 0;
       margin-bottom: 0;
       padding-bottom: 100%;
+    }
+
+    #{$parent}__logo {
+      height: 100%;
     }
 
     #{$parent}__title {
@@ -135,6 +163,12 @@
   /**
    * Dark mode.
    */
+  .is-dark & {
+    &__link {
+      color: $COLOR_DARK_MODE_WHITE;
+    }
+  }
+
   .is-dark .template--mountains & {
     &__meta {
       background-color: mix($COLOR_GREEN, $COLOR_BLACK, 25%);
