--- a/src/styles/components/dark-mode.scss
+++ b/src/styles/components/dark-mode.scss
@@ -19,6 +19,10 @@
     transform: translateY(0);
   }
 
+  &:hover .icon__text {
+    text-decoration: underline;
+  }
+
   &.is-active {
     #{$parent}__slide {
       transform: translateY(-50%);
